# streaming-06-scenarios

./: .editorconfig  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  pyproject.toml  zensical.toml
.github/: .yamllint.yml  dependabot.yml  lychee.toml
.github/workflows/: ci-python-zensical.yml  deploy-zensical.yml  links.yml
data/: coffee_orders.csv  currencies.csv  discount_codes.csv  drinks.csv  products.csv  regions.csv  sales.csv  stores.csv
data/output/: coffee.duckdb  consumed_coffee_orders.csv  consumed_sales.csv  consumed_sales_teja.csv  sales.duckdb  sales_teja.duckdb
docs/: api.md  glossary.md  index.md  project-instructions.md  your-files.md
src/streaming/: __init__.py  kafka_admin.py  kafka_consumer_case.py  kafka_consumer_coffee_teja.py  kafka_consumer_teja.py  kafka_producer_case.py  kafka_producer_coffee_teja.py  kafka_producer_teja.py
src/streaming/core/: utils.py
src/streaming/data_engineering/: __init__.py  derived_fields.py  derived_fields_coffee_teja.py  derived_fields_teja.py
src/streaming/data_validation/: __init__.py  data_contract_case.py  data_contract_coffee_teja.py  data_contract_teja.py  data_validation_case.py
src/streaming/storage/: __init__.py  storage_case.py  storage_coffee_teja.py  storage_teja.py
src/streaming/visualizations/: __init__.py  live_visualizations_case.py  live_visualizations_coffee_teja.py  live_visualizations_teja.py
tests/: test_data_engineering.py  test_duckdb_sql.py  test_smoke.py  test_storage_case.py
